編集、削除、複製機能追加
