# api/api/v1/money-diary/_id@string/index.ts
@@ -1,5 +1,16 @@
 /* eslint-disable */
+import type * as Types from '../../../../@types'
+
 export type Methods = {
+  put: {
+    reqHeaders?: {
+      userId: string
+    } | undefined
+
+    status: 200
+    reqBody: Types.MoneyDiaryDto
+  }
+
   delete: {
     status: 200
   }
